# python_patterns

./: Makefile  README.md  alchemy_test.py  allocation.db  models.py  pyproject.toml  requirements.txt  test.db  test_allocate.py  test_batches.py
src/allocation/: config.py  models.py  repository.py  services.py
src/allocation/adapters/: orm.py
src/allocation/api/fastapi/: fastapi_app.py
src/allocation/api/flask/: flask_app.py
src/allocation/service_layer/: repository.py  services.py  unit_of_work.py
tests/: conftest.py
tests/e2e/: test_api.py
tests/integration/: test_repository.py  test_uow.py
tests/unit/: test_allocate.py  test_batches.py  test_services.py
